--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer base {
-  @font-face {
-      font-family: 'YoungSerif';
-      src: url(./components/fonts/YoungSerif-Regular.ttf) format('.ttf');
-  }
-  @font-face {
-      font-family: 'Outfit';
-      font-style: normal;
-      font-weight: 400;
-      src: url(./components/fonts/Outfit-Regular.ttf) format('.ttf');
-  }
-}
